added functionality for feature hashing

--- a/InitialPresentation_plots.ipynb
+++ b/InitialPresentation_plots.ipynb
@@ -1220,7 +1220,123 @@
         "id": "RjztW9lDGs0F"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "'''\n",
+        "---- this code is for othe exploration purposes------\n",
+        "import os\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import glob\n",
+        "import multiprocessing as mp\n",
+        "from joblib import Parallel, delayed\n",
+        "import pickle \n",
+        "import sys\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "\n",
+        "#read data\n",
+        "# files = glob.glob('./*.csv')\n",
+        "df = pd.read_csv('./kddcup.csv')\n",
+        "                                                                            # df = Parallel(n_jobs=mp.cpu_count())(delayed(pd.read_csv)(i, low_memory=False) for i in files)\n",
+        "                                                                            # df = pd.concat(df)\n",
+        "\n",
+        "# #catogorical columns\n",
+        "# classes = np.unique(list(map(lambda x:x[41],df.values.tolist())))\n",
+        "# protocol_type =np.unique(list(map(lambda x:x[1],df.values.tolist())))\n",
+        "# service =np.unique(list(map(lambda x:x[2],df.values.tolist())))\n",
+        "# flag =np.unique(list(map(lambda x:x[3],df.values.tolist())))\n",
+        "# land = np.unique(list(map(lambda x:x[6],df.values.tolist())))\n",
+        "# logged_in = np.unique(list(map(lambda x:x[11],df.values.tolist())))\n",
+        "# is_host_login = np.unique(list(map(lambda x:x[20],df.values.tolist())))\n",
+        "# is_guest_login = np.unique(list(map(lambda x:x[21],df.values.tolist())))\n",
+        "\n",
+        "#add column names\n",
+        "df.columns = [\"duration\",\n",
+        "\"protocol_type\",\n",
+        "\"service\",\n",
+        "\"flag\",\n",
+        "\"src_bytes\",\n",
+        "\"dst_bytes\",\n",
+        "\"land\",\n",
+        "\"wrong_fragment\",\n",
+        "\"urgent\",\n",
+        "\"hot\",\n",
+        "\"num_failed_logins\",\n",
+        "\"logged_in\",\n",
+        "\"num_compromised\",\n",
+        "\"root_shell\",\n",
+        "\"su_attempted\",\n",
+        "\"num_root\",\n",
+        "\"num_file_creations\",\n",
+        "\"num_shells\",\n",
+        "\"num_access_files\",\n",
+        "\"num_outbound_cmds\",\n",
+        "\"is_host_login\",\n",
+        "\"is_guest_login\",\n",
+        "\"count\",\n",
+        "\"srv_count\",\n",
+        "\"serror_rate\",\n",
+        "\"srv_serror_rate\",\n",
+        "\"rerror_rate\",\n",
+        "\"srv_rerror_rate\",\n",
+        "\"same_srv_rate\",\n",
+        "\"diff_srv_rate\",\n",
+        "\"srv_diff_host_rate\",\n",
+        "\"dst_host_count\",\n",
+        "\"dst_host_srv_count\",\n",
+        "\"dst_host_same_srv_rate\",\n",
+        "\"dst_host_diff_srv_rate\",\n",
+        "\"dst_host_same_src_port_rate\",\n",
+        "\"dst_host_srv_diff_host_rate\",\n",
+        "\"dst_host_serror_rate\",\n",
+        "\"dst_host_srv_serror_rate\",\n",
+        "\"dst_host_rerror_rate\",\n",
+        "\"dst_host_srv_rerror_rate\",\n",
+        "\"classes\"]\n",
+        "\n",
+        "#label encoding\n",
+        "cat_cols = [\"protocol_type\",\"service\",\"flag\",\"land\",\"logged_in\", \"is_host_login\",\"is_guest_login\"]\n",
+        "labelencoder = LabelEncoder()\n",
+        "categorical_var = [df[\"protocol_type\"],df[\"service\"],df[\"flag\"],df[\"land\"],df[\"logged_in\"], df[\"is_host_login\"],df[\"is_guest_login\"]]\n",
+        "cat_var_encoded = list(map(labelencoder.fit_transform, categorical_var))\n",
+        "cat_var_encoded = [i.tolist() for i in cat_var_encoded]\n",
+        "del categorical_var\n",
+        "\n",
+        "#transposing\n",
+        "def transpoese_list(j):\n",
+        "    return [cat_var_encoded[i][j] for i in range(7)]\n",
+        "cat_var_encoded = list(map(transpoese_list,range(4898430)))\n",
+        "\n",
+        "#create DF of cat vars\n",
+        "cat_var_encoded_df = pd.DataFrame(cat_var_encoded,columns=[\"protocol_type\",\"service\",\"flag\",\"land\",\"logged_in\", \"is_host_login\",\"is_guest_login\"])\n",
+        "del cat_var_encoded\n",
+        "\n",
+        "#replace original cols with encoded cols\n",
+        "def replace_cols(i):\n",
+        "    df[i] = cat_var_encoded_df[i]\n",
+        "[ replace_cols(i) for i in cat_cols]\n",
+        "del cat_var_encoded_df\n",
+        "\n",
+        "\n",
+        "    \n",
+        "\n",
+        "#verify index of the col names \n",
+        "df.iloc[:,1:4].columns\n",
+        "df.iloc[:,6:8].columns\n",
+        "df.iloc[:,11:13].columns\n",
+        "df.iloc[:,20:22].columns\n",
+        "    # or\n",
+        "df.iloc[:,[1,2,3, 6,11,20,21]]  \n",
+        "\n",
+        "\n",
+        "#one hot encoder\n",
+        "# onehotencoder = OneHotEncoder(categorical_features = [1,2,3, 6,11,20,21])\n",
+        "# df = onehotencoder.fit_transform(df).toarray()\n",
+        "\n",
+        "\n",
+        "'''\n"
+      ]
     }
   ]
 }
